--- a/assets/css/pricing.css
+++ b/assets/css/pricing.css
@@ -1,10 +1,3 @@
-
-/* 
----------------------------------------------
-The Clients
----------------------------------------------
-*/
-
 .pricing-tables {
     padding-top: 130px;
   }
@@ -37,19 +30,19 @@ The Clients
     position: absolute;
     top: 0;
     left: 0;
-    background-image: url(../images/regular-table-top.png);
+    /* background-image: url(../images/regular-table-top.png); */
     z-index: 0;
     content: '';
     width: 274px;
     height: 221px;
-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
   }
   
   .pricing-item-regular:after {
     position: absolute;
     bottom: 0;
     right: 0;
-    background-image: url(../images/regular-table-bottom.png);
+    /* background-image: url(../images/regular-table-bottom.png);  */
     z-index: 0;
     content: '';
     width: 370px;
@@ -80,7 +73,7 @@ transition: .5s ease-in-out;
   }
   
   .pricing-item-regular ul li {
-    color: #4b8ef1;
+    color: #1e4e34;
     font-size: 15px;
     margin-bottom: 15px;
   }
@@ -114,7 +107,7 @@ transition: .5s ease-in-out;
     position: absolute;
     top: 0;
     left: 0;
-    background-image: url(../images/pro-table-top.png);
+    /* background-image: url(../images/pro-table-top.png); */
     z-index: 0;
     content: '';
     width: 281px;
@@ -127,33 +120,12 @@ transition: .5s ease-in-out;
     right: 0;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url(../images/pro-table-bottom.png);
+    /* background-image: url(../images/pro-table-bottom.png); */
     z-index: 0;
     content: '';
     width: 100%;
     height: 201px;
   }
-  
-  /* .pricing-item-pro {
-    box-shadow: 0px 0px 15px rgba(0,0,0,0.07);
-    border-radius: 50px;
-    padding: 120px 30px;
-    text-align: center;
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-  } */
-  
-  /* .pricing-item-pro:before {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-image: url(../images/pro-table-top.png);
-    z-index: 0;
-    content: '';
-    width: 281px;
-    height: 251px;
-  } */
   
   .pricing-item-pro:after {
     position: absolute;
@@ -161,7 +133,7 @@ transition: .5s ease-in-out;
     right: 0;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url(../images/pro-table-bottom.png);
+    /* background-image: url(../images/pro-table-bottom.png); */
     z-index: 0;
     content: '';
     width: 100%;
@@ -191,7 +163,7 @@ transition: .5s ease-in-out;
   }
   
   .pricing-item-pro ul li {
-    color: #4b8ef1;
+    color: #1e4e34;
     font-size: 15px;
     margin-bottom: 15px;
   }
