--- a/assets/css/pricing.css
+++ b/assets/css/pricing.css
@@ -1,128 +1,39 @@
 .pricing-tables {
-  padding-top: 130px;
-}
+    padding-top: 130px;
+  }
+  
+  .pricing-tables  .section-heading {
+    text-align: center;
+    margin-bottom: 80px;
+  }
+  
+  .pricing-tables .section-heading p {
+    margin-top: 10px;
+    margin-left: 18%;
+    margin-right: 18%;
+  }
 
-.pricing-tables  .section-heading {
-  text-align: center;
-  margin-bottom: 80px;
-}
+  .pricing-item {
+    position: relative;
+    z-index: 1;
+    padding: 30px;
+    box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+    /* background-color: #fff; */
+    background: linear-gradient(0deg, rgba(133, 172, 147, 0.5), rgba(255,255,255,255));
+    border-radius: 10px;
+    border-top-right-radius: 50px;
+    transition: all .3s;
+  }
 
-.pricing-tables .section-heading p {
-  margin-top: 10px;
-  margin-left: 18%;
-  margin-right: 18%;
-}
-
-.pricing-item {
-  margin-top: 30px;
-  border-radius: 50px;
-  border: 0.3px solid #1e4e34;
-  box-shadow: 0px 10px 15px rgba(0,0,0,0.5);
-  background: linear-gradient(0deg, rgba(139,173,156), #fff);
-  padding: 90px 30px;
-  text-align: center;
-  position: relative;
-  z-index: 1;
-  overflow: hidden;
-  transition: .5s ease-in-out;
-  font-weight: bold;
-}
-
-.pricing-item:before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 0;
-  content: '';
-  width: 274px;
-  height: 221px;
-  transition: .5s ease-in-out;
-}
-
-.pricing-item:after {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: 0;
-  content: '';
-  width: 370px;
-  height: 171px;
-  transition: .5s ease-in-out;
-}  
-
-.pricing-item span.price {
-  font-size: 40px;
-  color: #fff;
-  position: absolute;
-  font-weight: 700;
-  z-index: 1;
-  left: 30px;
-  top: 30px;
-}
-
-.pricing-item h4 {
-  font-size: 20px;
-  font-weight: 700;
-  margin-bottom: 30px;
-}
-
-.pricing-item .icon img {
-  width: 120px;
-  height: 106px;
-  margin-bottom: 30px;
-}
-
-.pricing-item ul li {
-  color: #1e4e34;
-  font-size: 15px;
-  margin-bottom: 15px;
-}
-
-.pricing-item ul li:last-child {
-  margin-bottom: 0px;
-}
-
-.pricing-item ul li.non-function {
-  color: #afafaf;
-  text-decoration: line-through;
-}
-
-.pricing-item .border-button {
-  position: relative;
-  z-index: 1;
-  margin-top: 40px;
-}
-
-.pricing-item:hover {
-  box-shadow: 0px 0px 15px rgba(0,0,0,0.07);
-  border-radius: 50px;
-  padding: 100px 30px;
-  text-align: center;
-  position: relative;
-  z-index: 1;
-  overflow: hidden;
-}
-
-.pricing-item:hover::before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 0;
-  content: '';
-  width: 281px;
-  height: 221px;
-}
-
-.pricing-item:hover::after {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: 0;
-  content: '';
-  width: 100%;
-  height: 201px;
-}
-
-
+  .pricing-item:hover {
+     position: relative;
+    z-index: 1;
+    padding: 30px;
+    box-shadow: 10px 10px 15px rgba(0,0,0,0.1);
+    background: #85ac93;
+    border-radius: 10px;
+    border-top-left-radius: 50px;
+    transition: all .3s;
+  }
+  
+  
