--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,69 +1,3 @@
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, div
-pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q,
-s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li,
-figure, header, nav, section, article, aside, footer, figcaption {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-}
-
-.grid:after {
-  content: '';
-  display: block;
-  clear: both;
-}
-
-h2 span {
-  color: #f7f7f7;
-}
-
-.grid-sizer,
-.grid-item {
-  width: 50%;
-}
-
-.grid-item {
-  float: left;
-}
-
-.grid-item img {
-  display: block;
-  max-width: 100%;
-}
-
-
-.clearfix:after {
-  content: ".";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  line-height: 0;
-  height: 0;
-}
-
-.clearfix {
-  display: inline-block;
-}
-
-html[xmlns] .clearfix {
-  display: block;
-}
-
-* html .clearfix {
-  height: 1%;
-}
-
-ul, li {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-header, nav, section, article, aside, footer, hgroup {
-  display: block;
-}
-
 * {
   box-sizing: border-box;
 }
@@ -75,6 +9,10 @@ html, body {
   -ms-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+ul li {
+  list-style: none;
 }
 
 a {
@@ -134,12 +72,12 @@ body {
   }
 }
 
-.section-heading {
+.rounded-info {
   position: relative;
   z-index: 2;
 }
 
-.section-heading h4 {
+.rounded-info h4 {
   color: #2a2a2a;
   font-size: 30px;
   font-weight: 700;
@@ -147,17 +85,17 @@ body {
   margin-bottom: 10px;
 }
 
-.section-heading h4 em {
+.rounded-info h4 em {
   font-style: normal;
   color: #1e4e34;
 }
 
-.section-heading img {
+.rounded-info img {
   width: 45px;
   height: 2px;
 }
 
-.section-heading p {
+.rounded-info p {
   margin-top: 10px;
 }
 
@@ -359,12 +297,6 @@ body {
   font-weight: 400;
 }
 
-.header-area .main-nav .nav li:last-child a:hover ,
-.background-header .main-nav .nav li:last-child a:hover,
-.header-area .main-nav .nav li:nth-child(6) a:hover ,
-.background-header .main-nav .nav li:nth-child(6) a:hover {
-  /* color: #fff !important; */
-}
 
 .header-area .main-nav .nav li a {
   display: block;
@@ -740,27 +672,11 @@ body {
   }
 }
 
-
-
-
-
-
-
-/* 
----------------------------------------------
-Banner Style
---------------------------------------------- 
-*/
-
 .main-banner {
   content:'';
   background-image: url(../images/galeri.jpg);
-  /* background-repeat: no-repeat;
-  background-position: center; */
   background-size: cover;
   padding: 250px 120px 150px 120px;
-  /* position: relative; */
-  /* overflow: hidden; */
   height: 100vh; 
 }
 
@@ -785,18 +701,12 @@ Banner Style
   100% {top:0px;}
 }
 
-/* 
----------------------------------------------
-produk Style
---------------------------------------------- 
-*/
-
 .produk {
   padding-top: 130px;
   position: relative;
 }
 
-.produk  .section-heading p {
+.produk  .rounded-info p {
   margin-top: 10px;
   margin-left: 18%;
   margin-right: 18%;
@@ -831,12 +741,12 @@ produk Style
   z-index: 0;
 }
 
-.produk .section-heading {
+.produk .rounded-info {
   text-align: center;
   margin-bottom: 80px;
 }
 
-.produk .section-heading .line-dec {
+.produk .rounded-info .line-dec {
   margin: 0 auto;
 }
 
@@ -853,24 +763,16 @@ produk Style
   box-shadow: 10px 10px 15px rgba(0,0,0,0.3);
 }
 
-
-
-/*
----------------------------------------------
-About Us
----------------------------------------------
-*/
-
 .testimoni {
   padding-top: 130px;
   position: relative;
 }
 
-.testimoni .section-heading {
+.testimoni .rounded-info {
   margin-bottom: 45px;
 }
 
-.testimoni .section-heading,
+.testimoni .rounded-info,
 .testimoni .box-item,
 .testimoni p,
 .testimoni .box-item .gradient-button,
@@ -918,37 +820,17 @@ About Us
   z-index: 1;
 }
 
-.testimoni:after {
-  background-image: url(../images/about-bg.jpg);
-  width: 777px;
-  height: 1132px;
-  content: '';
-  position: absolute;
-  background-repeat: no-repeat;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 0;
-}
-
-
-
-/* 
----------------------------------------------
-The Clients
----------------------------------------------
-*/
 
 .the-clients {
   margin-top: 130px;
 }
 
-.the-clients  .section-heading {
+.the-clients  .rounded-info {
   text-align: center;
   margin-bottom: 80px;
 }
 
-.the-clients  .section-heading p {
+.the-clients  .rounded-info p {
   margin-top: 10px;
   margin-left: 18%;
   margin-right: 18%;
@@ -1035,7 +917,6 @@ The Clients
 
 .the-clients .nacc .thumb .client-content {
   padding: 60px 30px;
-  background-image: url(../images/client-bg.png);
   background-size: cover;
   border-radius: 50px;
   width: 100%;
@@ -1078,13 +959,6 @@ The Clients
 }
 
 
-
-/* 
----------------------------------------------
-Free Quote
---------------------------------------------- 
-*/
-
 .free-quote {
   background-image: url(../images/quote-bg.jpg);
   background-repeat: no-repeat;
@@ -1097,16 +971,16 @@ Free Quote
   margin-top: 130px;
 }
 
-.free-quote .section-heading {
+.free-quote .rounded-info {
   margin-bottom: 60px;
 }
 
-.free-quote .section-heading h6,
-.free-quote .section-heading h4 {
+.free-quote .rounded-info h6,
+.free-quote .rounded-info h4 {
   color: #fff;
 }
 
-.free-quote .section-heading .line-dec {
+.free-quote .rounded-info .line-dec {
   margin: 0 auto;
   background-color: #fff;
 }
@@ -1169,11 +1043,11 @@ footer {
   padding-bottom: 60px;
 }
 
-footer .section-heading {
+footer .rounded-info {
   margin-bottom: 45px;
 }
 
-footer .section-heading h4 {
+footer .rounded-info h4 {
   line-height: 45px;
   color: #fff;
   margin-left: 13%;
