--- a/assets/css/pricing.css
+++ b/assets/css/pricing.css
@@ -17,23 +17,27 @@
     position: relative;
     z-index: 1;
     padding: 30px;
-    box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
-    /* background-color: #fff; */
-    background: linear-gradient(0deg, rgba(133, 172, 147, 0.5), rgba(255,255,255,255));
+    box-shadow: 0px 0px 15px rgba(0,0,0,0.3);
     border-radius: 10px;
     border-top-right-radius: 50px;
+    border-bottom-left-radius: 50px;
     transition: all .3s;
+    cursor: pointer;
   }
 
   .pricing-item:hover {
-     position: relative;
-    z-index: 1;
-    padding: 30px;
-    box-shadow: 10px 10px 15px rgba(0,0,0,0.1);
-    background: #85ac93;
+    padding: 20px;
     border-radius: 10px;
     border-top-left-radius: 50px;
+    border-bottom-right-radius: 50px;
     transition: all .3s;
   }
   
-  
+  .pricing-img {
+    height: 200px;
+    transition: all .3s;
+  }
+  .pricing-item:hover .pricing-img{
+    transition: all .3s;
+    border-radius: 40px;
+  }
